# raytracer2.0

./: CMakeLists.txt  Film.h  README.md  Transformation.h  directions.txt  main.cpp
tests/: avent.txt  badass.txt  lenin.txt  objTeapot.txt  refract.txt  refract2.txt  scene13.txt  scene14.txt  scene15.txt  simpleObjTest.txt  simpleTriangleTransforms.txt  softshadow.txt  test2.txt  testShadows.txt  testTransform.txt
